Corrigidos os ícones de WhatsApp e Instagram

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Projeto Social Nota 10 - NAPBI</title>
     <!-- Vincula o arquivo CSS para estilização -->
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome para ícones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     
@@ -119,16 +121,17 @@
         <div class="container">
             <h2>Entre em Contato</h2>
             <p>Se você busca um atendimento psicopedagógico profissional e personalizado, estamos aqui para ajudar. Fale conosco através dos canais abaixo.</p>
+
             <div class="contact-info">
                 <div class="contact-item">
                     <a href="https://wa.me/5534996942062" target="_blank" class="contact-link">
-                        <img src="https://via.placeholder.com/48/80D7AF/26547C?text=W" alt="Ícone WhatsApp">
+                        <i class="fab fa-whatsapp fa-2x" style="color:#25D366;"></i>
                         <span>WhatsApp: (34) 99694-2062</span>
                     </a>
                 </div>
                 <div class="contact-item">
-                    <a href="https://www.instagram.com/psicope_dagogia?igsh=OXBobjdzamVpMjVj" target="_blank" class="contact-link">
-                        <img src="https://via.placeholder.com/48/80D7AF/26547C?text=I" alt="Ícone Instagram">
+                    <a href="https://www.instagram.com/psicope_dagogia" target="_blank" class="contact-link">
+                        <i class="fab fa-instagram fa-2x" style="color:#C13584;"></i>
                         <span>Instagram: @psicope_dagogia</span>
                     </a>
                 </div>
