--- a/index.html
+++ b/index.html
@@ -3,98 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Social Atitude 10</title>
+    <title>Projeto Social Atitude 10 - NAPBI</title>
+    <!-- Vincula o arquivo CSS para estilização -->
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome para ícones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    
     <!-- HEADER -->
     <header class="header">
         <div class="container">
-            <a href="#" class="logo">Projeto Social Atitude 10</a>
+            <a href="#" class="logo">NAPBI</a>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="#inicio">Início</a></li>
                     <li><a href="#sobre">Sobre Nós</a></li>
                     <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#como-ajudar">Como Ajudar</a></li>
-                    <li><a href="#contato">Fale Conosco</a></li>
+                    <li><a href="#metodologia">Metodologia</a></li>
+                    <li><a href="#ajudar">Como Ajudar</a></li>
+                    <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- HERO -->
-    <section class="hero" id="inicio">
+    <!-- SEÇÃO PRINCIPAL (HERO) -->
+    <main class="hero" id="inicio">
         <div class="container">
-            <h1>Transformando vidas através de um olhar psicopedagógico</h1>
-            <p>Oferecemos um acompanhamento dedicado para o desenvolvimento e bem-estar de cada indivíduo.</p>
-            <img src="https://unsplash.com/pt-br/fotografias/irmao-sorridente-fazendo-licao-de-casa-juntos-cAutVPEZ9_c" alt="Crianças estudando em casa" style="max-width:100%; border-radius:8px; margin-top:20px;">
+            <div class="hero-content">
+                <h1>Projeto Social Atitude 10</h1>
+                <h2>NAPBI - Núcleo de Atendimento Psicopedagógico Batista Independente</h2>
+                <p>Transformando vidas através de um olhar psicopedagógico. Oferecemos um acompanhamento dedicado para o desenvolvimento integral de crianças, adolescentes e suas famílias, com o rigor e a excelência que a sua jornada merece.</p>
+                <div class="cta-buttons">
+                    <a href="#contato" class="btn btn-primary">Fale Conosco</a>
+                    <a href="#ajudar" class="btn btn-secondary">Como Ajudar</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- SEÇÃO SOBRE NÓS -->
+    <section class="section about-us" id="sobre">
+        <div class="container">
+            <h2>Nossa Missão</h2>
+            <p>No coração do Projeto Social Atitude 10, o Núcleo de Atendimento Psicopedagógico Batista Independente nasceu com a missão de oferecer apoio especializado para a comunidade. Acreditamos que um bom diagnóstico e um acompanhamento cuidadoso são a base para superar os desafios de aprendizagem. Nossa equipe de profissionais qualificados trabalha com ética e empatia, pautada em valores cristãos, para promover o bem-estar e o potencial máximo de cada indivíduo.</p>
         </div>
     </section>
 
-    <!-- SOBRE NÓS -->
-    <section class="about-us" id="sobre">
+    <!-- SEÇÃO SERVIÇOS -->
+    <section class="section services" id="servicos">
         <div class="container">
-            <h2>Sobre Nós</h2>
-            <p>O Projeto Social Atitude 10, através do NAPBI, existe para transformar vidas. Nossa equipe qualificada trabalha com empatia, ética e compromisso com a comunidade.</p>
-            <img src="https://unsplash.com/pt-br/fotografias/corte-filmou-criancas-pequenas-desenhando-com-o-professor-em-sala-de-aula-TbaILwCndwA" alt="Crianças desenhando com professor" style="max-width:100%; border-radius:8px; margin-top:20px;">
-        </div>
-    </section>
-
-    <!-- SERVIÇOS -->
-    <section class="services" id="servicos">
-        <div class="container">
-            <h2>Nossos Serviços</h2>
+            <h2>Intervenções Especializadas para o Desenvolvimento</h2>
+            <p>No NAPBI, nosso foco não é apenas em atividades, mas em um processo de desenvolvimento completo e personalizado. Nossas intervenções são cuidadosamente planejadas e baseadas em avaliações contínuas, utilizando uma abordagem neuropsicopedagógica clínica e institucional. Atuamos em diversas frentes para promover a aprendizagem e o bem-estar.</p>
             <div class="services-grid">
                 <div class="service-item">
-                    <p>📚 Educação</p>
+                    <h3>Acompanhamento Psicopedagógico Individualizado</h3>
+                    <p>Com base em um diagnóstico aprofundado, desenvolvemos planos de intervenção individualizados para crianças, adolescentes e adultos. Nosso trabalho foca em áreas como a estimulação cognitiva, o desenvolvimento de habilidades sociais e a superação de dificuldades de aprendizagem.</p>
                 </div>
                 <div class="service-item">
-                    <p>🧠 Psicopedagogia</p>
+                    <h3>Apoio Institucional</h3>
+                    <p>Oferecemos suporte e orientação para escolas, creches e outras instituições de ensino. Ajudamos a otimizar os processos de aprendizagem e a desenvolver estratégias pedagógicas mais eficazes para garantir um ambiente escolar inclusivo e acolhedor.</p>
                 </div>
                 <div class="service-item">
-                    <p>🌱 Desenvolvimento</p>
+                    <h3>Especialização em TEA</h3>
+                    <p>Nosso núcleo possui expertise no Transtorno do Espectro Autista (TEA). Utilizamos métodos comprovados, como a Análise do Comportamento Aplicada (ABA), Método TEACCH e PECS, para promover o desenvolvimento da comunicação, autonomia e interação social.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Reorganização Neurofuncional</h3>
+                    <p>Aplicamos o Método Padovan de Reorganização Neurofuncional para estimular e reabilitar as funções neuropsíquicas. Essa abordagem ajuda a reorganizar a base neurológica, favorecendo a aprendizagem e outras funções cognitivas.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- COMO AJUDAR -->
-    <section class="help" id="como-ajudar">
+    <!-- SEÇÃO METODOLOGIA -->
+    <section class="section methodology" id="metodologia">
         <div class="container">
-            <h2>Como Ajudar</h2>
+            <h2>Nossa Metodologia</h2>
+            <p>No Núcleo de Atendimento Psicopedagógico, combinamos a expertise da neuropsicopedagogia clínica e institucional com métodos de intervenção comprovados, garantindo um acompanhamento completo e adaptado às necessidades de cada indivíduo. Nosso trabalho se baseia em uma abordagem multidisciplinar que integra diferentes técnicas para oferecer os melhores resultados.</p>
+        </div>
+    </section>
+
+    <!-- SEÇÃO COMO AJUDAR -->
+    <section class="section help" id="ajudar">
+        <div class="container">
+            <h2>Junte-se a Nós e Faça a Diferença</h2>
+            <p>O Projeto Social Atitude 10, através do NAPBI, existe para transformar vidas. Sua contribuição, seja ela qual for, nos ajuda a continuar oferecendo um atendimento de excelência para quem mais precisa. Veja como você pode fazer parte da nossa missão:</p>
             <div class="help-options">
                 <div class="help-item">
-                    <p>❤️ Doação</p>
+                    <h3>Doação Financeira</h3>
+                    <p>Sua doação financeira é investida diretamente na manutenção de nossas atividades e na aquisição de materiais de qualidade. Entre em contato para obter as informações bancárias e de transferência.</p>
                 </div>
                 <div class="help-item">
-                    <p>🙌 Voluntariado</p>
+                    <h3>Doação Material</h3>
+                    <p>Materiais de apoio são fundamentais para o nosso trabalho. Aceitamos doações de jogos pedagógicos, livros, materiais de papelaria e equipamentos que possam auxiliar no desenvolvimento. Entre em contato para saber sobre nossas necessidades atuais.</p>
+                </div>
+                <div class="help-item">
+                    <h3>Voluntariado</h3>
+                    <p>Seu tempo e dedicação são inestimáveis. Se você deseja fazer parte da nossa equipe de voluntários, entre em contato. Juntos, podemos fazer a diferença na vida de muitas famílias.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- CONTATO -->
-    <section class="contact" id="contato">
+    <!-- SEÇÃO CONTATO -->
+    <section class="section contact" id="contato">
         <div class="container">
-            <h2>Fale Conosco</h2>
+            <h2>Entre em Contato</h2>
+            <p>Se você busca um atendimento psicopedagógico profissional e personalizado, estamos aqui para ajudar. Fale conosco através dos canais abaixo.</p>
             <div class="contact-info">
                 <div class="contact-item">
-                    <a href="https://wa.me/5534996942062" target="_blank">
-                        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" width="30">
-                        WhatsApp: (34) 99694-2062
+                    <a href="https://wa.me/5534996942062" target="_blank" class="contact-link">
+                        <i class="fab fa-whatsapp" style="font-size:24px; color:#25D366;"></i>
+                        <span>WhatsApp: (34) 99694-2062</span>
                     </a>
                 </div>
                 <div class="contact-item">
-                    <a href="https://www.instagram.com/psicope_dagogia/" target="_blank">
-                        <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" width="30">
-                        Instagram: @psicope_dagogia
+                    <a href="https://www.instagram.com/psicope_dagogia" target="_blank" class="contact-link">
+                        <i class="fab fa-instagram" style="font-size:24px; color:#C13584;"></i>
+                        <span>Instagram: @psicope_dagogia</span>
                     </a>
                 </div>
                 <div class="contact-item">
-                    <address>
-                        📍 Rua Jorge Cauhy, 586 - Bairro Planalto, Uberlândia - MG
-                    </address>
+                    <i class="fas fa-map-marker-alt" style="font-size:24px; color:#FF0000;"></i>
+                    <span>Endereço: Rua Jorge Cauhy, 586 - Bairro Planalto, Uberlândia - MG</span>
                 </div>
             </div>
         </div>
@@ -102,7 +135,10 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <p>© 2025 Projeto Social Atitude 10</p>
+        <div class="container">
+            <p>&copy; 2025 Projeto Social Atitude 10. Todos os direitos reservados.</p>
+        </div>
     </footer>
+
 </body>
 </html>
