Adiciona botão 'Estude Conosco' com link para WhatsApp

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <li><a href="#sobre">Sobre Nós</a></li>
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="#metodologia">Metodologia</a></li>
+                    <!-- 🔹 NOVO BOTÃO ADICIONADO AQUI -->
+                    <li><a href="https://wa.me/5534996942062" target="_blank">Estude Conosco</a></li>
+                    <!-- 🔹 FIM DA MODIFICAÇÃO -->
                     <li><a href="#ajudar">Como Ajudar</a></li>
                     <li><a href="#contato">Contato</a></li>
                 </ul>
